# ssg-photo-modeling-india

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile.colmap  Dockerfile.colmap.cuda  Dockerfile.gsplat  Dockerfile.openmvg  Dockerfile.openmvs  Dockerfile.sibr  docker-compose.yml  gsplat-environment.yml
docs/: index.html  search.json  videos.html
docs/data/hanuman/: 0-colmap-points3D.ply  0-iteration_1000-gsplat-point_cloud.splat  0-iteration_2500-gsplat-point_cloud.splat  0-iteration_3000-gsplat-point_cloud.splat
docs/js/: image_viewer.js  ply_viewer.js
docs/prj/: hanuman.html  index.html
reports/: _analysis01.qmd  _index.qmd  _ply_viewer.qmd  _ply_viewer2.qmd  _projects.qmd  _quarto.yml  _splat_template.qmd  _test.qmd  _videos.qmd  analysis01.xlsx  index.qmd  utils.py
reports/js/: splat_viewer.js
reports/prj/: hanuman.qmd  index.qmd
scripts/: cli.py  colmap_pipeline.py  convert_matches_g_to_dot.py  extract_frames.py  generate-transform.py  gsplat_pipeline.py  mask_generator.py  openmvg_pipeline.py  openmvg_ratio_scan.py  openmvs_pipeline.py  pymeshlab_utils.py  report_utils.py  transform-X-45Y90Y90.txt  transform-x-90y0z0.txt  utils.py  wrappers.py
sources/: README.md
src/docs/: index.html  search.json  styles.css
src/docs/js/: glb_viewer.js  ply_viewer.js  splat_viewer.js
src/docs/prj/: index.html
src/docs/site_libs/bootstrap/: bootstrap-94a5a94b28c04ca0511a2cb6dfb9e5a2.min.css
src/makefiles/: Recipes-colmap.mak  Recipes-containers.mak  Recipes-gsplat.mak  Recipes-utils.mak  Recipes.mak  Sources-sync.mak
